--- a/src/webparts/designPatternsChoiceFields/components/DesignPatternsChoiceFields.module.scss
+++ b/src/webparts/designPatternsChoiceFields/components/DesignPatternsChoiceFields.module.scss
@@ -1,5 +1,5 @@
 @import '~@microsoft/sp-office-ui-fabric-core/dist/sass/SPFabricCore.scss';
-$bce-design-system-color-darkBlue: #054166;
+$bce-design-system-color-darkBlue: #1072AE;
 $bce-design-system-color-lightBlue: #0979be;
 .designPatternsChoiceFields {
   > div:nth-child(1){
