--- a/src/webparts/foundationsLayout/components/FoundationsLayout.module.scss
+++ b/src/webparts/foundationsLayout/components/FoundationsLayout.module.scss
@@ -65,7 +65,7 @@
     background: #e6ecef;
 
     .header {
-      background: #054166;
+      background: #1072AE;
       padding: 5px 8px 7px 8px;
       color: white;
       font-size: 13px;
@@ -77,7 +77,7 @@
       padding-top: 12px;
       font-size: 16px;
       line-height: 21px;
-      color: #054166;
+      color: #1072AE;
     }
 
     .body {
@@ -106,7 +106,7 @@
       }
 
       [class*="ms-ShimmerLine-root"] {
-        color: #054166;
+        color: #1072AE;
         background-color: #93adbc;
         height: 8px;
 
@@ -142,13 +142,13 @@
     }
 
     .title {
-      color: #054166;
+      color: #1072AE;
     }
 
     .links {
       padding-top: 10px;
       padding-bottom: 10px;
-      color: #054166;
+      color: #1072AE;
 
       span {
         padding-right: 26px;
@@ -158,7 +158,7 @@
     }
 
     .content {
-      color: #054166;
+      color: #1072AE;
       background: white;
       padding: 15px;
       height: 124px;
