--- a/src/webparts/homepage/components/Homepage.module.scss
+++ b/src/webparts/homepage/components/Homepage.module.scss
@@ -16,7 +16,7 @@
     padding: 1.5em 20px 6em;
     margin: -8px -20px 0;
     box-sizing: border-box;
-    min-height: calc(100vh - 91px); // full screen height minus two top bars
+    //min-height: calc(100vh - 50px); // full screen height minus two top bars
     display: flex;
 
     &::after {
@@ -108,17 +108,6 @@
  [class*="ms-Grid"]{
    margin-top:10px
  }
- [class*="ms-Grid-col"]{
-   > div:nth-child(1){
-    height: 200px;
-    border: 1px solid lightgray;
-    padding: 20px;
-   }
-   > div:nth-child(2){
-    margin-top: 10px;
-   }
- }
-
   @media screen and (min-width: $ms-screen-min-md) {
     &__cover {
       padding: 32px 32px 112px;
@@ -174,12 +163,12 @@
 [class="bce-design-system-sectionTitle"]{
   font-size: 24px;
   font-weight: 600;
-  color: #054166!important;
+  color: #1072AE!important;
   padding-bottom: 20px;
 }
 
 [class*="SPCanvas-canvas"]{
-  background-color: #054166;
+  background-color: #1072AE;
   max-width: 100%!important;
   height: 100%;
   [class*="CanvasZone"]{
