--- a/src/webparts/homepage/components/Homepage.module.scss
+++ b/src/webparts/homepage/components/Homepage.module.scss
@@ -3,6 +3,9 @@
   .Canvas--withLayout,.CanvasZoneContainer{
    // background-color: #04395a;
   }
+  #BCE_DesignSystem_FooterWarpper .ms-Grid{
+    border-top: 1px solid #979797;
+  }
 }
 .homepage {
   height: 100%;
