--- a/src/webparts/designPatternsTextField/components/DesignPatternsTextField.module.scss
+++ b/src/webparts/designPatternsTextField/components/DesignPatternsTextField.module.scss
@@ -68,11 +68,10 @@
       }
       [class*="ms-TextField--borderless"]{
         input{
-          color: #a80000;
           border-bottom:1px solid #a80000;
         }
         ::placeholder {
-          color: #a80000;
+         // color: #a80000;
         }
       }
       
