--- a/src/webparts/designPatternsSearchBox/components/DesignPatternsSearchBox.module.scss
+++ b/src/webparts/designPatternsSearchBox/components/DesignPatternsSearchBox.module.scss
@@ -21,6 +21,9 @@
       border-left: none!important;
       border-right: none!important;
     }
+    [class*="ms-SearchBox-field"]{
+      margin-left: 8px;
+    }
   }
   [class*="hover"]{
     > [class*="ms-SearchBox"]{
